--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "framer-motion": "^6.2.8",
     "millify": "^4.0.0",
     "next": "12.1.0",
+    "nodemailer": "^6.7.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "eslint": "8.11.0",
